# PawSome-Backend

./: .gitignore  DOCUMENTATION_MAP.md  README.md  START_BOTH.bat  TEST_CONNECTION.bat  project.md
backend/: .env.example  .gitignore  FEATURE_SUMMARY.md  TESTING_MATCHES.md  USER_PROFILE_API.md  alembic.ini  push-backend.bat  pyproject.toml  set_r2_cors.py  start-backend.bat  test_chat.html  test_db_connection.py
backend/alembic/: env.py
backend/alembic/versions/: 08edcca036c1_create_swipes_matches_notifications_.py  1379710dc834_create_chat_participants_table.py  75a6f8ea185e_create_users_and_pet_profiles.py  a47376de7603_add_user_profile_fields.py  abcb794c8f9d_create_messages_table.py  b5e938cdcb09_create_pet_photos.py  d8ed4e7ae8e4_create_user_achievements_table.py  e3f2a1b8c9d5_add_columns_to_existing_tables.py  e49968edd5ac_create_users_and_pet_profiles.py  f4a9c2e1d7b6_create_new_tables.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  cors.py  database.py  rate_limit.py  redis.py  security.py
backend/app/models/: __init__.py  block.py  chat_participant.py  favorite.py  match.py  match_preference.py  message.py  message_reaction.py  notification.py  pet_photo.py  pet_profile.py  report.py  swipe.py  user.py  user_achievement.py
backend/app/schemas/: achievement.py  auth.py  block.py  browse.py  chat.py  favorite.py  (+10 more)
backend/docs/: CHAT_API.md  CHAT_SYSTEM_COMPLETE.md  ENDPOINTS.md  MATCHING_API.md  MATCHING_SYSTEM_SUMMARY.md  NEW_FEATURES_SUMMARY.md  PROFILE_COMPLETION_EXAMPLES.md  README.md  RESPONSE_VALIDATION_FIX.md
(+28 files in other folders)
