[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt<4",
    "fastapi[standard]>=0.136.3",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "redis>=8.0.0",
    "sqlalchemy>=2.0.50",
]

[tool.fastapi]
app = "app.main:app"
